--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/paperback"]
-	path = themes/paperback
-	url = https://github.com/dashdashzako/paperback
-[submodule "paperback"]
-	path = paperback
-	url = https://github.com/dashdashzako/paperback
+[submodule "themes/m10c"]
+	path = themes/m10c
+	url = https://github.com/vaga/hugo-theme-m10c.git
